<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GamepadActivity">

    <Button
        android:id="@+id/rightStick"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="200dp"
        android:background="@drawable/circlebutton"
        android:fontFamily="serif-monospace"
        android:text="o"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="77dp"
        android:layout_height="41dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/start_button_text"
        app:layout_constraintBottom_toBottomOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/button4" />

    <Button
        android:id="@+id/rbButton"
        android:layout_width="68dp"
        android:layout_height="40dp"
        android:text="@string/rb_button_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rtButton" />

    <Button
        android:id="@+id/lbButton"
        android:layout_width="68dp"
        android:layout_height="40dp"
        android:text="@string/lb_button_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ltButton" />

    <Button
        android:id="@+id/povLeft"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/trianglebutton"
        android:rotation="90"
        android:text="▼"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/povDown"
        app:layout_constraintEnd_toStartOf="@+id/povUp"
        app:layout_constraintTop_toTopOf="@+id/povUp" />

    <Button
        android:id="@+id/povRight"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/trianglebutton"
        android:rotation="270"
        android:text="▼"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/povDown"
        app:layout_constraintStart_toEndOf="@+id/povUp"
        app:layout_constraintTop_toTopOf="@+id/povUp" />

    <Button
        android:id="@+id/povDown"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/trianglebutton"
        android:text="▼"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/povLeft"
        app:layout_constraintTop_toBottomOf="@+id/povUp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="64dp"
        android:layout_height="0dp"
        android:layout_marginBottom="88dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/circlebutton"
        android:elevation="12dp"
        android:text="@string/button4_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/button3"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="@+id/button1"
        app:layout_constraintTop_toTopOf="@+id/button1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="64dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/circlebutton"
        android:elevation="12dp"
        android:text="@string/button2_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/button3"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintStart_toStartOf="@+id/button1"
        app:layout_constraintTop_toTopOf="@+id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="64dp"
        android:layout_height="0dp"
        android:layout_marginBottom="95dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/circlebutton"
        android:elevation="12dp"
        android:text="@string/button3_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="64dp"
        android:layout_height="0dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/circlebutton"
        android:elevation="12dp"
        android:text="@string/button1_text"
        android:textStyle="bold"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rbButton" />

    <Button
        android:id="@+id/rtButton"
        android:layout_width="75dp"
        android:layout_height="45dp"
        android:text="@string/rt_button_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ltButton"
        android:layout_width="75dp"
        android:layout_height="45dp"
        android:text="@string/lt_button_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/povUp"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/trianglebutton"
        android:rotation="180"
        android:text="▼"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbButton" />

    <Button
        android:id="@+id/selectButton"
        android:layout_width="77dp"
        android:layout_height="41dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="64dp"
        android:text="@string/select_button_text"
        app:layout_constraintBottom_toBottomOf="@+id/povUp"
        app:layout_constraintStart_toEndOf="@+id/povRight" />

    <Button
        android:id="@+id/leftStick"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="200dp"
        android:background="@drawable/circlebutton"
        android:fontFamily="serif-monospace"
        android:text="o"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>